add simple support for java9 module command add-exports